Completed Leave Management Module

--- a/GligorCoreProject.Web/appsettings.json
+++ b/GligorCoreProject.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GligorCoreProject.Web-4b07cf04-459c-4c2f-b6dc-99d88a0089be;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=GligorCoreProjectDb;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
